--- a/web/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
@@ -137,8 +137,13 @@ $divider-line: 1px solid #e5e5e5
   +tag-flag
   background: #d5d5d5
   color: white
+  height: 16px
+  font-size: 0.7rem
   line-height: 12px
+  padding: 0.2em 0.8em 0.2em 1.1em
   &:after
-    border-left: 10px solid #eee
+    border-left: 8px solid #eee
+    border-top: 8px solid transparent
+    border-bottom: 8px solid transparent
 
 
