--- a/web/themes/hsk_zymphonies/sass/_front.sass
+++ b/web/themes/hsk_zymphonies/sass/_front.sass
@@ -160,9 +160,11 @@
       a
         +small-grey-links
 
+  .full-width-bottom
+    background: #eee
+
   .block-infoblock
     clear: both
-    background: #eee
     +x-rem(padding-top, 4)
     +x-rem(padding-bottom, 3)
     .field--name-body
