--- a/web/themes/hsk_zymphonies/templates/layout/page.html.twig
+++ b/web/themes/hsk_zymphonies/templates/layout/page.html.twig
@@ -244,8 +244,12 @@
 </div>
 <!-- End layout -->
 {% if page.content_full_width_bottom %}
-    <div class="full-with-bottom">
+    <div class="full-width-bottom">
+      <div class="container">
+        <div class="row">
     {{ page.content_full_width_bottom }}
+        </div>
+      </div>
     </div>
 {% endif %}
 
