--- a/web/themes/hsk_zymphonies/sass/_layout.sass
+++ b/web/themes/hsk_zymphonies/sass/_layout.sass
@@ -29,6 +29,11 @@
   .region-content
     margin-bottom: 40px
 
+.full-width-bottom
+  .region-content-full-width-bottom
+    .field--name-field-paragraphs
+      +legacy-pie-clearfix
+
 .no-sidebars
   .content_layout
     +make-md-column(12)
@@ -160,7 +165,6 @@
 
   .sidebar
     margin-top: 30px
-
 
 
 
