--- a/web/themes/hsk_zymphonies/sass/_views.sass
+++ b/web/themes/hsk_zymphonies/sass/_views.sass
@@ -213,7 +213,7 @@
           margin-right: 0.3em
           margin-right: 0.3em
 
-.path-dwz-rangliste
+.path-mitgliederliste
   form#views-exposed-form-dwz-list-page-1
     .js-form-item
       display: inline-block
@@ -240,7 +240,7 @@
       &.views-field-nothing
         display: none
 .user-logged-in
-  &.path-dwz-rangliste
+  &.path-mitgliederliste
     table
       th, td
         &.views-field-nothing
